--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,7 +4,7 @@
 
 # Hybrid product-team ownership
 
-/*.md @what3words/product @what3words/front-end-team
+*.md @what3words/product @what3words/front-end-team
 /packages/components/javascript/src/translations/ @what3words/product @what3words/front-end-team
 /apps/demos/ @what3words/product @what3words/front-end-team
 /apps/examples/components/ @what3words/product @what3words/front-end-team
