--- a/packages/components/javascript/package.json
+++ b/packages/components/javascript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@what3words/javascript-components",
-  "version": "5.0.1",
+  "version": "5.0.2-alpha.0",
   "private": false,
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
