chore: bump to 5.0.2

--- a/apps/demos/components-playground/package.json
+++ b/apps/demos/components-playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "components-playground",
-  "version": "5.0.2-alpha.0",
+  "version": "5.0.2",
   "description": "",
   "main": "index.js",
   "private": true,
