--- a/packages/components/angular/components/package.json
+++ b/packages/components/angular/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@what3words/angular-components",
-  "version": "5.0.2-alpha.0",
+  "version": "5.0.2",
   "private": false,
   "publishConfig": {
     "access": "public"
