--- a/apps/examples/components/autosuggest/react/react-vite/package.json
+++ b/apps/examples/components/autosuggest/react/react-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "components-autosuggest-react-vite",
-  "version": "5.0.2-alpha.0",
+  "version": "5.0.2",
   "private": true,
   "type": "module",
   "scripts": {
