--- a/apps/examples/components/map/static/static-esbuild/package.json
+++ b/apps/examples/components/map/static/static-esbuild/package.json
@@ -1,6 +1,6 @@
 {
   "name": "components-map-static",
-  "version": "5.0.2-alpha.0",
+  "version": "5.0.2",
   "description": "",
   "private": true,
   "main": "index.html",
