--- a/apps/examples/e2e/package.json
+++ b/apps/examples/e2e/package.json
@@ -1,6 +1,6 @@
 {
   "name": "examples-e2e",
-  "version": "5.0.2-alpha.0",
+  "version": "5.0.2",
   "private": "true",
   "description": "Test harness for what3Words web-components apps",
   "scripts": {
