--- a/packages/shared/javascript-cli/package.json
+++ b/packages/shared/javascript-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@what3words/javascript-cli",
-  "version": "5.0.2-alpha.0",
+  "version": "5.0.2",
   "private": true,
   "type": "module",
   "bin": {
