feat: AGENTS.md file for javascript components

--- a/packages/components/javascript/package.json
+++ b/packages/components/javascript/package.json
@@ -57,7 +57,8 @@
   "files": [
     "dist/",
     "loader/",
-    "hydrate/"
+    "hydrate/",
+    "AGENTS.md"
   ],
   "config": {
     "root": "../../.."
