--- a/packages/components/angular/angular.json
+++ b/packages/components/angular/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "c1878506-9105-4ed6-906e-7d0d46f0d2dc"
   },
   "projects": {
     "@what3words/angular-components": {
